Do not connect backward dependencies to listener when invalidate - Test
Signed-off-by: GONCALVES Bruno <bruno.goncalves_externe@rte-france.com>