@@ -10,11 +10,8 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.jimfs.Configuration;
 import com.google.common.jimfs.Jimfs;
 import com.powsybl.afs.mapdb.storage.MapDbAppStorage;
-import com.powsybl.afs.storage.AfsStorageException;
-import com.powsybl.afs.storage.AppStorage;
-import com.powsybl.afs.storage.InMemoryEventsBus;
-import com.powsybl.afs.storage.NodeGenericMetadata;
-import com.powsybl.afs.storage.NodeInfo;
+import com.powsybl.afs.storage.*;
+import com.powsybl.afs.storage.events.NodeEvent;
 import com.powsybl.computation.ComputationManager;
 import com.powsybl.iidm.network.NetworkFactoryService;
 import com.powsybl.timeseries.RegularTimeSeriesIndex;
@@ -57,7 +54,7 @@ class AfsBaseTest {
         fileSystem = Jimfs.newFileSystem(Configuration.unix());
         ComputationManager computationManager = Mockito.mock(ComputationManager.class);
         ad = new AppData(computationManager, computationManager, Collections.emptyList(),
-                Collections.emptyList(), Collections.singletonList(new FooFileExtension()), Collections.emptyList());
+                Collections.emptyList(), List.of(new FooFileExtension(), new WithDependencyFileExtension()), Collections.emptyList());
 
         storage = MapDbAppStorage.createMem("mem", ad.getEventsBus());
 
@@ -565,5 +562,41 @@ class AfsBaseTest {
         assertFalse(createdFile.hasDeepDependency(createdFile));
         otherFile.setDependencies("dep", Collections.singletonList(createdFile));
         assertTrue(createdFile.hasDeepDependency(createdFile, "dep"));
+    }
+
+    @Test
+    public void invalidate() {
+        Folder folder = afs.getRootFolder().createFolder("testFolder");
+        Project project = folder.createProject("test");
+        FooFile fooFile = project.getRootFolder().fileBuilder(FooFileBuilder.class).withName("Foo").build();
+        WithDependencyFile fileWithDep = project.getRootFolder().fileBuilder(WithDependencyFileBuilder.class).build();
+        fileWithDep.setFooDependency(fooFile);
+
+        // Previous code add connected WithDependencyFile with listeners
+        storage.getEventsBus().flush();
+        storage.getEventsBus().removeListeners();
+
+        fooFile.invalidate();
+
+        // WithDependencyFile is not connected => don't store event
+        String nodeEventType = "type";
+        storage.getEventsBus().pushEvent(new NodeEvent("id", nodeEventType) {
+        }, "Topic");
+        storage.getEventsBus().flush();
+        Optional<NodeEvent> updateEvent = fileWithDep.events.stream().filter(nodeEvent -> nodeEventType.equals(nodeEvent.getType())).findFirst();
+        assertTrue(updateEvent.isEmpty());
+
+        // WithDependencyFile is not connected => store event
+        List<ProjectFile> connectedBackwardDependencies = fooFile.getBackwardDependencies(true);
+        storage.getEventsBus().pushEvent(new NodeEvent("id", nodeEventType) {
+        }, "Topic");
+        storage.getEventsBus().flush();
+        assertEquals(1, connectedBackwardDependencies.size());
+        assertEquals(WithDependencyFile.class, connectedBackwardDependencies.get(0).getClass());
+        WithDependencyFile withDependencyFile = (WithDependencyFile) connectedBackwardDependencies.get(0);
+        Optional<NodeEvent> updateEvent2 = withDependencyFile.events.stream()
+                .filter(nodeEvent -> nodeEventType.equals(nodeEvent.getType()))
+                .findFirst();
+        assertFalse(updateEvent2.isEmpty());
     }
 }
